[gd_scene load_steps=2 format=3 uid="uid://c5jufslfcj263"]

[ext_resource type="Script" path="res://menu_principal.gd" id="1_srjyx"]

[node name="Menu Principale" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_srjyx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 510.0
alignment = 1

[node name="BoutonJouer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Jouer"

[node name="BoutonComment" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Comment Jouer"

[node name="BoutonQuitter" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quitter"
